syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

package userservice;

service UserServiceProto {
	rpc ListUsers (ListUsersRequest) returns (ListUsersReply);
    rpc GetUser (GetUserRequest) returns (GetUserReply);
    rpc GetUserRoles (GetUserRolesRequest) returns (GetUserRolesReply);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserReply);
    rpc CreateUser(UpdateUserRequest) returns (UpdateUserReply);
    rpc LockUser(LockUserRequest) returns (LockUserReply);
}

message ListUsersRequest {
	int32 skip = 1;
    int32 limit = 2;
    google.protobuf.StringValue customerId = 3;
}

message ListUsersReply {
    repeated UserViewModel list = 1;
    int32 total = 2;
}

message GetUserRequest {
    string username = 1;
}

message GetUserReply {
    optional UserViewModel data = 1;
}

message UserViewModel {
    string id = 1;                     
    string user_name = 2;              
    google.protobuf.StringValue email = 3;
    google.protobuf.StringValue phone_number = 4;
    bool is_locked = 5;
    repeated string roles = 6;         
    repeated string role_ids = 7;
    google.protobuf.StringValue customer_id = 8;
    google.protobuf.StringValue customer_name = 9;
}

message GetUserRolesRequest {
    google.protobuf.StringValue customer_id = 1;
}

message GetUserRolesReply {
    repeated UserRole data = 1;
}

message UserRole {
    string id = 1;
    string name = 2;
    string display_name = 3;
    repeated string actions = 4;
    google.protobuf.StringValue customer_id = 5;
    google.protobuf.StringValue customer_name = 6;
}

message UpdateUserRequest {
    string username = 1;
    string email = 2;
    google.protobuf.StringValue password = 3;
    google.protobuf.StringValue customer_id = 4;
    google.protobuf.StringValue phone_number = 5;
    repeated string roles = 6;
    bool is_locked = 7;
}

message UpdateUserReply {
    google.protobuf.StringValue message = 1;
}

message LockUserRequest {
    string username = 1;
    bool isLock = 2;
}

message LockUserReply {
    bool isSuccess = 1;
    google.protobuf.StringValue message = 2;
}